k8s/my-resume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-resume
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-resume
  template:
    metadata:
      labels:
        app: my-resume
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: my-resume
          image: dev-harbor.beans-atelier.org/my-resume/my-resume:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "300Mi"
              cpu: "250m"
            limits:
              memory: "600Mi"
              cpu: "500m"
          volumeMounts:
            - name: log-volume
              mountPath: /logs
      volumes:
        - name: log-volume
          hostPath:
            path: /home/wien/k8s/my-resume/logs
            type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  name: my-resume
  labels:
    app: my-resume
spec:
  type: ClusterIP
  selector:
    app: my-resume
  ports:
    - name: my-resume
      protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-resume
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-resume.beans-atelier.org
      secretName: my-resume-tls
  rules:
    - host: dev-resume.beans-atelier.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-resume
                port:
                  number: 80
